--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,8 @@ div {
   z-index: 2;
 }
 
-.fa-heart {
-  font-size: 26px;
-  color: palevioletred;
+.header .fa-heart {
+  font-size: 24px;
   cursor: pointer;
 }
 
@@ -41,6 +40,7 @@ div {
   padding: 5px 10px;
   border: none;
   border-radius: 10px;
+  margin: 0px;
 }
 
 .header div button {
@@ -50,54 +50,132 @@ div {
   border-radius: 10px;
   border: none;
   color: white;
-  /* box-shadow: inset 2px 2px 5px white; */
+  cursor: pointer;
+  margin: 0px;
+}
+
+.header div button:hover {
+  background: black;
+  color: white;
+}
+
+main {
+  display: flex;
+  background: #ccc;
+}
+
+.side-nav {
+  flex: 1;
+  background: white;
+  border-radius: 10px;
+  margin: 10px;
+  position: sticky;
+  top: 10px;
+  height: 80vh;
+  padding: 20px 50px;
+}
+
+.books-panel {
+  flex: 4;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.book {
+  background: white;
+  width: 28%;
+  margin: 0.5%;
+  height: 420px;
+  padding: 10px 2%;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+.book:hover {
+  transform: translateY(-10px);
+}
+
+.book h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.book .book-cover {
+  width: 80%;
+  height: 320px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border: 2px solid #ccc;
+  border-top: 5px solid #b5b5b5;
+  border-right: 5px solid #e4e4e4;
+  margin: 0 10%;
+  position: relative;
+  border-radius: 10px;
+}
+
+.fav-icon {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  font-size: 18px;
   cursor: pointer;
 }
 
-main{
-    display: flex;
-    background:#ccc;
+.book .book-cover::after {
+  content: "";
+  width: 100%;
+  height: 10%;
+  background-image: var(--book-pseudo-bg);
+  background-repeat: no-repeat;
+  background-position: 90% 93%;
+  background-size: cover;
+  position: absolute;
+  transform: rotateX(180deg) skew(30deg);
+  opacity: 0.2;
+  /* filter: blur(1px); */
+  top: 100%;
+  left: -3%;
+  z-index: -1;
 }
 
-.side-nav{
-    flex: 1;
-    background: white;
-    border-radius: 10px;
-    margin: 10px;
-    position: sticky;
-    top: 10px;
-    height: 80vh;
+.genre-list {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  font-weight: 100;
 }
 
-.books-panel{
-    flex: 4;
-    display: flex;
-    flex-wrap: wrap;
+.genre-list div {
+    cursor: pointer;
+    margin: 2px 0;
+    background: #f3f3f3;
+    padding: 2px 10px;
+    padding-left: 20px;
+    border-radius: 5px;
 }
 
-.book{
-    background: white;
-    width: 30%;
-    margin: 0.5%;
-    height: 400px;
-    padding: .5%;
-    border-radius: 10px;
+div.active-genre{
+    background: black;
+    color: white;
 }
 
-.book .book-cover{
-    width: 70%;
-    height: 300px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    border: 5px solid #ccc;
-    border-bottom: 5px solid black;
-    border-left: 10px solid black;
-    border-right: none;
-    margin: 0 15%;
-    position: relative;
+.sort {
+  background: #ccc;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.sort:hover {
+  background: black;
+  color: white;
 }
 
-.book .book-cover::after{
-    width: 100%;
+.genre-tag {
+  background: rgb(234, 234, 234);
+  padding: 2px 5px;
+  border-radius: 5px;
+  font-size: 12px;
 }
