--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0px;
   padding: 0px;
   font-family: Arial, Helvetica, sans-serif;
+  background: #c8c8c8;
 }
 
 .header {
@@ -61,7 +62,6 @@ div {
 
 main {
   display: flex;
-  background: #c8c8c8;
 }
 
 .side-nav {
@@ -111,7 +111,7 @@ main {
   background-size: cover;
   margin: 0 10%;
   position: relative;
-  box-shadow: 2px 5px 10px rgb(0,0,0);
+  box-shadow: 2px 5px 10px rgb(0, 0, 0);
 }
 
 .fav-icon {
@@ -146,6 +146,7 @@ main {
   left: 5px;
   transform: skewX(-45deg);
   z-index: -1;
+  border-radius: 60px 0 0 0 ;
 }
 
 .genre-list {
@@ -156,21 +157,21 @@ main {
 }
 
 .genre-list div {
-    cursor: pointer;
-    margin: 2px 0;
-    background: #f3f3f3;
-    padding: 2px 10px;
-    padding-left: 20px;
-    border-radius: 5px;
+  cursor: pointer;
+  margin: 2px 0;
+  background: #f3f3f3;
+  padding: 2px 10px;
+  padding-left: 20px;
+  border-radius: 5px;
 }
 
-div.active-genre{
-    background: black;
-    color: white;
+div.active-genre {
+  background: black;
+  color: white;
 }
 
 .sort {
-background: #f3f3f3;
+  background: #f3f3f3;
   padding: 10px;
   border-radius: 10px;
   cursor: pointer;
