--- a/css/components_styles.css
+++ b/css/components_styles.css
@@ -11,7 +11,7 @@
 .theme-switch .circle {
   background: #ccc;
   width: 100%;
-  height: 15px;
+  height: 10px;
   border-radius: 30px;
   box-shadow: inset 2px 2px 4px rgb(0, 0, 0, 0.5);
 }
@@ -58,11 +58,18 @@
   width: 60%;
   position: fixed;
   z-index: 110;
-  left: 15%;
+  left: 18%;
   top: 10%;
   display: flex;
-  padding: 20px 5%;
+  padding: 20px 2%;
   display: none;
+}
+
+.book-details h3,p{
+  margin: 0;
+}
+.book-details p{
+  margin: 12px 0;
 }
 
 .book-details.show {
