--- a/css/style.css
+++ b/css/style.css
@@ -120,15 +120,22 @@ main {
   top: 20px;
   font-size: 18px;
   cursor: pointer;
-  padding: 8px;
+  padding: 0px;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
+  margin: 8px;
 }
 
 .fav-icon:hover {
   background: rgb(226, 226, 226);
+}
+
+.fav-icon.scale {
+  padding: 8px;
+  margin: 0;
 }
 
 .book .book-cover::before {
