--- a/css/components_styles.css
+++ b/css/components_styles.css
@@ -40,8 +40,8 @@
   background: rgb(0, 0, 0, 0.8);
   width: 100%;
   height: 100%;
-  position: absolute;
-  z-index: 100;
+  position: fixed;
+  z-index: 150;
   top: 0px;
   left: 0px;
   display: none;
@@ -57,7 +57,7 @@
   height: 80%;
   width: 60%;
   position: fixed;
-  z-index: 110;
+  z-index: 155;
   left: 18%;
   top: 10%;
   display: flex;
