--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,22 @@ body {
 
 .header {
   padding: 10px 50px;
-  position: relative;
+  position: sticky;
+  top: 0px;
+  z-index: 120;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .header-overlay {
   background: rgb(229, 229, 229);
-  opacity: 0.9;
+  opacity: 0.7;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -62,6 +69,7 @@ div {
 
 main {
   display: flex;
+  margin: 10px;
 }
 
 .side-nav {
