--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ main {
   flex: 1;
   background: white;
   border-radius: 10px;
-  margin: 10px;
+  margin: 5px;
   position: sticky;
   top: 10px;
   height: 80vh;
@@ -98,7 +98,27 @@ main {
   border-radius: 10px;
   overflow: hidden;
   transition: 0.5s;
-  cursor: pointer;
+}
+
+.book:hover .book-tool-tip {
+  visibility: visible;
+  opacity: 1;
+}
+
+.book-tool-tip {
+  background: #000000;
+  width: 50%;
+  padding: 10px 20px;
+  color: white;
+  position: absolute;
+  top: 50%; 
+  left: 50%;
+  transform: translate(-50%, -50%); 
+  z-index: 10;
+  border-radius: 5px;
+  visibility: hidden;
+  opacity: 0; 
+  transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
 .book:hover {
@@ -120,6 +140,7 @@ main {
   margin: 0 10%;
   position: relative;
   box-shadow: 2px 5px 10px rgb(0, 0, 0);
+  cursor: pointer;
 }
 
 .fav-icon {
@@ -189,6 +210,11 @@ main {
   border-radius: 5px;
 }
 
+.genre-list div:hover {
+  background: rgb(156, 156, 156);
+  color: white;
+}
+
 div.active-genre {
   background: black;
   color: white;
@@ -200,6 +226,7 @@ div.active-genre {
   border-radius: 10px;
   cursor: pointer;
 }
+
 .sort:hover {
   background: black;
   color: white;
