--- a/css/components_styles.css
+++ b/css/components_styles.css
@@ -105,23 +105,22 @@ p {
   right: -400px;
   top: 0px;
   z-index: 160;
-  transition: .5s ease-in-out;
+  transition: 0.5s ease-in-out;
   padding: 2.5vh 10px;
 }
 
-.favorites-panel h1{
+.favorites-panel h1 {
   margin-left: 15px;
 }
 
-.favorites-panel.open-panel{
+.favorites-panel.open-panel {
   right: 0px;
 }
 
-.favorite-books{
-
+.favorite-books {
 }
 
-.favorite-book{
+.favorite-book {
   width: 90%;
   margin: 10px 5%;
   background: #e9e9e9;
@@ -130,26 +129,27 @@ p {
   padding: 5px;
 }
 
-.favorite-book h2{ 
+.favorite-book h2 {
   margin: 0px;
 }
 
-.favorite-book-cover{
+.favorite-book-cover {
   width: 50px;
   height: 75px;
-  background: black;
   margin: 5px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
-.favorite-book-text{
-
+.favorite-book-text {
 }
 
 /* scroll-bar */
 
 * {
-  scrollbar-width: thin; 
-  scrollbar-color: #888 #f1f1f1; 
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
 }
 
 ::-webkit-scrollbar {
@@ -163,4 +163,35 @@ p {
 ::-webkit-scrollbar-thumb {
   background: #888;
   border-radius: 4px;
+}
+
+/* message */
+.message-pop-up {
+  background: #b8ff9c;
+  color: #225f0a;
+  border-radius: 5px;
+  border: 1px solid;
+  position: fixed;
+  z-index: 200;
+  top: 30px;
+  right: 250px;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+.message-pop-up.show {
+  display: flex;
+}
+
+.progress {
+  width: 5%;
+  height: 2px;
+  background: #225f0a;
+  position: absolute;
+  bottom: 5px;
+  border-radius: 5px;
+  transition: 1s;
 }
