--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,9 @@ main {
   border-radius: 10px;
   margin: 5px;
   position: sticky;
-  top: 10px;
+  top: 100px;
   height: 80vh;
-  padding: 20px 50px;
+  padding: 10px 15px;
 }
 
 .books-panel {
@@ -107,13 +107,13 @@ main {
   padding: 10px 20px;
   color: white;
   position: absolute;
-  top: 50%; 
+  top: 50%;
   left: 10%;
-  transform: translate(-10%, -50%); 
+  transform: translate(-10%, -50%);
   z-index: 10;
   border-radius: 5px;
   visibility: hidden;
-  opacity: 0; 
+  opacity: 0;
   transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
@@ -135,7 +135,7 @@ main {
   background-size: cover;
   margin: 0 10%;
   position: relative;
-  box-shadow: 2px 5px 10px rgb(0, 0, 0);
+  box-shadow: 0px 5px 10px rgb(0, 0, 0,0.7);
   cursor: pointer;
 }
 
@@ -143,7 +143,6 @@ main {
   visibility: visible;
   opacity: 1;
 }
-
 
 .fav-icon {
   position: absolute;
@@ -158,6 +157,7 @@ main {
   justify-content: center;
   transition: 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
   margin: 8px;
+  color: rgb(255, 97, 97);
 }
 
 .fav-icon:hover {
@@ -172,49 +172,52 @@ main {
 .book .book-cover::before {
   content: "";
   display: block;
-  width: 10px;
+  width: 7px;
   height: 100%;
-  background: rgb(233, 233, 233);
+  background: rgb(207, 207, 207);
   position: absolute;
   top: -4px;
-  right: -10px;
-  transform: skewY(-40deg);
+  right: -7px;
+  transform: skewY(-50deg);
   z-index: -1;
+  box-shadow: inset -1px 1px 5px rgb(0, 0, 0, 0.1);
 }
 
 .book .book-cover::after {
   content: "";
   display: block;
   width: 100%;
-  height: 10px;
-  background: rgb(190, 190, 190);
+  height: 7px;
+  background: rgb(237, 237, 237);
   position: absolute;
-  top: -10px;
-  left: 5px;
-  transform: skewX(-45deg);
+  top: -7px;
+  left: 4px;
+  transform: skewX(-50deg);
   z-index: -1;
-  border-radius: 60px 0 0 0;
+  box-shadow: inset -1px 1px 5px rgb(0, 0, 0, 0.2);
 }
 
 .genre-list {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   font-size: 20px;
   font-weight: 100;
 }
 
 .genre-list div {
   cursor: pointer;
-  margin: 2px 0;
+  margin: 10px 5px;
   background: #f3f3f3;
-  padding: 2px 10px;
-  padding-left: 20px;
-  border-radius: 5px;
+  padding: 5px 10px;
+  border-radius: 30px;
+  transition: .3s;
+  border: 1px solid #ccc;
 }
 
 .genre-list div:hover {
-  background: rgb(156, 156, 156);
+  background: rgb(0, 0, 0);
   color: white;
+  transform: scale(1.1);
 }
 
 div.active-genre {
