--- a/css/search.css
+++ b/css/search.css
@@ -1,16 +1,19 @@
 .book-results {
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .book-card {
   width: 25%;
   background: white;
   border-radius: 10px;
-  padding: 5px 10px;
+  padding: 10px 10px;
   margin: 1% 2%;
 }
 
-.book-card img {
+.book-card-image{
   width: 100%;
+  height: 250px;
+  border-radius: 10px;
 }
