--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0px;
   padding: 0px;
   font-family: Arial, Helvetica, sans-serif;
-  background: #c8c8c8;
+  background: #f4f4f4;
   overflow-x: hidden;
 }
 
@@ -91,11 +91,12 @@ main {
 }
 
 .book {
-  background: white;
-  width: 20%;
-  margin: 0.5%;
-  height: 350px;
-  padding: 10px 2%;
+  /* background: white; */
+  /* background: rgb(0, 0, 0); */
+  width: 22%;
+  margin: 1%;
+  height: 380px;
+  padding: 10px 0%;
   border-radius: 10px;
   overflow: hidden;
   transition: 0.5s;
@@ -129,13 +130,10 @@ main {
 
 .book-cover {
   width: 80%;
-  height: 255px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  height: 280px;
   margin: 0 10%;
   position: relative;
-  box-shadow: 0px 5px 10px rgb(0, 0, 0,0.7);
+  box-shadow: 1px 5px 10px rgb(0, 0, 0,0.9);
   cursor: pointer;
 }
 
@@ -174,7 +172,7 @@ main {
   display: block;
   width: 7px;
   height: 100%;
-  background: rgb(207, 207, 207);
+  background: rgb(177, 177, 177);
   position: absolute;
   top: -4px;
   right: -7px;
@@ -188,7 +186,7 @@ main {
   display: block;
   width: 100%;
   height: 7px;
-  background: rgb(237, 237, 237);
+  background: rgb(231, 231, 231);
   position: absolute;
   top: -7px;
   left: 4px;
