--- a/css/style.css
+++ b/css/style.css
@@ -91,14 +91,11 @@ main {
 }
 
 .book {
-  /* background: white; */
-  /* background: rgb(0, 0, 0); */
   width: 22%;
   margin: 1%;
   height: 380px;
   padding: 10px 0%;
   border-radius: 10px;
-  overflow: hidden;
   transition: 0.5s;
 }
 
@@ -122,6 +119,10 @@ main {
   transform: translateY(-10px);
 }
 
+.book:hover .book-cover {
+  box-shadow: 0px 2px 20px rgb(0, 0, 0, 0.9);
+}
+
 .book h3 {
   display: flex;
   align-items: center;
@@ -133,8 +134,9 @@ main {
   height: 300px;
   margin: 0 10%;
   position: relative;
-  box-shadow: 1px 5px 10px rgb(0, 0, 0,0.9);
+  box-shadow: 1px 5px 10px rgb(0, 0, 0, 0.9);
   cursor: pointer;
+  transition: 0.5s;
 }
 
 .book-cover:hover .book-tool-tip {
@@ -208,7 +210,7 @@ main {
   background: #f3f3f3;
   padding: 5px 10px;
   border-radius: 30px;
-  transition: .3s;
+  transition: 0.3s;
   border: 1px solid #ccc;
 }
 
