--- a/css/favourite_books.css
+++ b/css/favourite_books.css
@@ -28,11 +28,18 @@
 
 .favorite-book {
   display: flex;
-  padding: 5px 10px;
+  padding: 10px 10px;
   margin: 10px;
   height: 70px;
   overflow: hidden;
   position: relative;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.3);
+  transition: .5s;
+}
+
+.favorite-book:hover {
+    transform: translateY(-10px);
 }
 
 .favorite-book h2 {
@@ -46,26 +53,60 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  border: 1px solid;
 }
+
+
+.favorite-book-cover::before {
+  content: "";
+  display: block;
+  width: 7px;
+  height: 100%;
+  background: rgb(177, 177, 177);
+  position: absolute;
+  top: -4px;
+  right: -7px;
+  transform: skewY(-50deg);
+  z-index: -1;
+  box-shadow: inset -3px -3px 1px rgb(0, 0, 0, 0.3);
+}
+
+.favorite-book-cover::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 7px;
+  background: rgb(231, 231, 231);
+  position: absolute;
+  top: -7px;
+  left: 4px;
+  transform: skewX(-50deg);
+  z-index: -1;
+  box-shadow: inset 3px 3px 1px rgb(0, 0, 0, 0.3);
+}
+
 
 .favorite-book-text {
   height: 100%;
   width: 100%;
   position: relative;
+  padding-left: 20px;
 }
 
 .remove-favorite {
-  color: white;
   font-size: 12px;
-  background: black;
   padding: 5px 10px;
-  border-radius: 30px;
+  border-radius: 10px;
   border: none;
   cursor: pointer;
   position: absolute;
   bottom: 5px;
   right: 20px;
+  box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.3);
+}
+
+.remove-favorite:hover {
+    background: black;
+    color: white;
 }
 
 * {
