--- a/css/theme.css
+++ b/css/theme.css
@@ -1,6 +1,9 @@
 .dark-panel {
   background: rgb(49, 49, 49);
   color: white;
+   background: rgba(115, 115, 115, 0.2);
+  backdrop-filter: blur(10px); 
+  -webkit-backdrop-filter: blur(10px); 
 }
 
 .header.dark-panel * {
@@ -10,3 +13,4 @@
 .white-color {
   color: rgb(226, 226, 226);
 }
+
