--- a/css/components_styles.css
+++ b/css/components_styles.css
@@ -18,11 +18,11 @@
   width: 100%;
   height: 10px;
   border-radius: 30px;
-  box-shadow: inset 2px 2px 4px rgb(0, 0, 0, 0.5);
+  box-shadow: inset 2px 2px 2px rgb(0, 0, 0, 0.5);
 }
 
 .theme-switch .dot {
-  background: #626262;
+  background: #000000;
   width: 30px;
   height: 30px;
   border-radius: 30px;
@@ -36,12 +36,25 @@
   left: 0%;
 }
 
+.theme-switch .dot:hover {
+  background: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+}
+
 .theme-switch .dot.move {
   left: calc(100% - 30px);
+  background: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+}
+.dot.move:hover {
+  background: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 .overlay {
   background: rgb(0, 0, 0, 0.8);
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(10px);
   width: 100%;
   height: 100%;
   position: fixed;
@@ -56,17 +69,21 @@
 }
 
 .book-details {
-  background: white;
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   border-radius: 10px;
-  height: 80%;
-  width: 60%;
+  height: 70%;
+  width: 50%;
   position: fixed;
   z-index: 155;
-  left: 18%;
+  left: 23%;
   top: 10%;
   display: flex;
   padding: 20px 2%;
   display: none;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  color: white;
 }
 
 .book-details h3,
@@ -74,7 +91,7 @@ p {
   margin: 0;
 }
 .book-details p {
-  margin: 12px 0;
+  margin: 5px 0;
 }
 
 .book-details.show {
