--- a/css/search.css
+++ b/css/search.css
@@ -17,13 +17,16 @@
   cursor: pointer;
 }
 
-.search-genre-tag{
-  background: white;
+.search-genre-tag {
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   border-radius: 30px;
-  padding: 5px 10px;
+  padding: 2px 10px;
   margin: 10px;
   position: absolute;
-  font-size: 14px;
+  font-size: 12px;
+  color: white;
 }
 
 .book-card h3:hover {
@@ -31,7 +34,40 @@
 }
 
 .book-card-image {
-  width: 100%;
+  width: 80%;
   height: 350px;
-  border-radius: 10px;
+  margin: 10%;
+  position: relative;
+  border-radius: 0 0 0 2px;
+  box-shadow: 2px 5px 10px rgb(0, 0, 0, 0.7);
+}
+
+.book-card-image::before {
+  content: "";
+  display: block;
+  width: 10px;
+  height: 100%;
+  background: rgb(177, 177, 177);
+  position: absolute;
+  top: -6px;
+  right: -10px;
+  transform: skewY(-50deg);
+  z-index: -1;
+  box-shadow: inset -3px -3px 1px rgb(0, 0, 0, 0.3);
+  border-radius: 0px 5px 0 0;
+}
+
+.book-card-image::after {
+  border-radius: 10px 3px 0 0;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 12px;
+  background: rgb(231, 231, 231);
+  position: absolute;
+  top: -10px;
+  left: 5px;
+  transform: skewX(-45deg);
+  z-index: -1;
+  box-shadow: inset 3px 3px 1px rgb(0, 0, 0, 0.3);
 }
