--- a/css/style.css
+++ b/css/style.css
@@ -137,9 +137,10 @@ main {
   height: 300px;
   margin: 0 10%;
   position: relative;
-  box-shadow: 1px 5px 10px rgb(0, 0, 0, 0.9);
+  box-shadow: 1px 5px 10px rgb(0, 0, 0, 0.7);
   cursor: pointer;
   transition: 0.5s;
+  border-radius: 0 0 0 2px;
 }
 
 .book-cover:hover .book-tool-tip {
@@ -175,29 +176,31 @@ main {
 .book .book-cover::before {
   content: "";
   display: block;
-  width: 7px;
+  width: 10px;
   height: 100%;
   background: rgb(177, 177, 177);
   position: absolute;
-  top: -4px;
-  right: -7px;
+  top: -6px;
+  right: -10px;
   transform: skewY(-50deg);
   z-index: -1;
   box-shadow: inset -3px -3px 1px rgb(0, 0, 0, 0.3);
+  border-radius: 0 5px 3px 0;
 }
 
 .book .book-cover::after {
   content: "";
   display: block;
   width: 100%;
-  height: 7px;
+  height: 10px;
   background: rgb(231, 231, 231);
   position: absolute;
-  top: -7px;
-  left: 4px;
+  top: -10px;
+  left: 6px;
   transform: skewX(-50deg);
   z-index: -1;
   box-shadow: inset 3px 3px 1px rgb(0, 0, 0, 0.3);
+  border-radius: 10px 5px 0 0;
 }
 
 .genre-list {
