--- a/css/search.css
+++ b/css/search.css
@@ -10,6 +10,7 @@
   border-radius: 10px;
   padding: 10px 10px;
   margin: 1% 2%;
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .book-card h3 {
