--- a/css/favourite_books.css
+++ b/css/favourite_books.css
@@ -97,6 +97,7 @@
   bottom: 5px;
   right: 20px;
   box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.3);
+  background: rgb(255, 255, 255, 0.5);
 }
 
 .remove-favorite:hover {
